--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,8 @@
 /* Цвет иконок в футкре */
 --grey-almost-not-transparent: rgba(255, 255, 255, 0.1);
 
+--cubic-bezier: cubic-bezier(0.4, 0, 0.2, 1)
+
 }
 
 /* белый - color: #FFFFFF; */
@@ -92,6 +94,7 @@ h1, h2, h3, h4, ul, p {
 }
 
 .nav-link {
+    position: relative;
     text-decoration: none;
     font-weight: 500;
     font-size: 14px;
@@ -105,7 +108,34 @@ h1, h2, h3, h4, ul, p {
 .nav-link:hover,
 .nav-link:focus {color: var(--accent);}
 
-.current {color: var(--accent);}
+.nav-link::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    display: block;
+    width: 100%;
+    height: 4px;
+    border: 1px solid var(--accent);
+    border-radius: 2px;
+    background-color: var(--accent);
+    
+    transform: scaleX(0);
+    transition: transform 250ms var(--cubic-bezier);
+}
+
+.nav-link:hover::after {
+    transform: scaleX(1);
+
+}
+
+.current {
+    color: var(--accent);
+}
+
+.current::after {
+    transform: scaleX(1);
+}
 
 .contacts {
     display: flex;
