--- a/css/styles.css
+++ b/css/styles.css
@@ -124,9 +124,9 @@ h1, h2, h3, h4, ul, p {
     transition: transform 250ms var(--cubic-bezier);
 }
 
-.nav-link:hover::after {
+.nav-link:hover::after,
+.nav-link:focus::after{
     transform: scaleX(1);
-
 }
 
 .current {
@@ -317,17 +317,37 @@ h1, h2, h3, h4, ul, p {
 
 .card-img:not(:last-child) {
     margin-right: 30px;
+    position: relative;   
 }
 
 .card-img .thumb {
-    height: 294px;    
+    height: 294px;
+    position: relative;
 }
 
 .card-img img {
     display: block;
     height: 100%;
     width: 100%;
-    object-fit: cover;
+    object-fit: cover;    
+}
+
+.inscription {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 70px;
+    background: rgba(47, 48, 58, 0.8);
+    
+    font-family: Roboto;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 16px;
+    text-align: center;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #FFFFFF;
+    padding: 27px 0;
 }
 
 /* секция Команда */
