--- a/css/styles.css
+++ b/css/styles.css
@@ -770,7 +770,24 @@ footer {
 }
 
 .modal-order {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
     width: 528px;
     height: 581px;
     border-radius: 4px;
+    background-color: #ffffff;
+}
+
+.close-button {
+    position: absolute;
+    top: 8px;
+    right: 8px;
+    height: 30px;
+    width: 30px;
+    padding: 6px; 
+    border-radius: 50%;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    background-color: #ffffff;
 }
