--- a/css/styles.css
+++ b/css/styles.css
@@ -770,7 +770,7 @@ footer {
 }
 
 .modal-order {
-    position: absolute;
+    position: fixed;
     top: 50%;
     left: 50%;
     transform: translateX(-50%) translateY(-50%);
@@ -784,6 +784,8 @@ footer {
     position: absolute;
     top: 8px;
     right: 8px;
+    display: flex;
+    justify-content: center;
     height: 30px;
     width: 30px;
     padding: 6px; 
